--- a/reports/index.html
+++ b/reports/index.html
@@ -9,7 +9,7 @@
   <body>
     <a href="./unit/report.html">UNIT REPORT</a>
     <hr />
-    <a href="./loki/report.html">SCREENSHOT REPORT</a>
+    <a href="./.loki/report.html">SCREENSHOT REPORT</a>
     <a>UNIT REPORT</a>
   </body>
 </html>
